milestone : local scan detecting nearby devices